--- a/tactile-control-lib/CMakeLists.txt
+++ b/tactile-control-lib/CMakeLists.txt
@@ -26,11 +26,6 @@ project(TactileControl
         LANGUAGES CXX
         VERSION 0.0.0.0)
 
-find_package(YCM REQUIRED)
-find_package(YARP REQUIRED)
-find_package(ICUB REQUIRED)
-find_package(GSL)
-
 # Defines the CMAKE_INSTALL_LIBDIR, CMAKE_INSTALL_BINDIR and many other useful macros
 # See https://cmake.org/cmake/help/latest/module/GNUInstallDirs.html
 include(GNUInstallDirs)
@@ -47,8 +42,6 @@ set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
 # from YCM. Files are under the cmake subdirectory.
 # See https://github.com/robotology/ycm/
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
-list(APPEND CMAKE_MODULE_PATH ${YARP_MODULE_PATH})
-list(APPEND CMAKE_MODULE_PATH ${ICUB_MODULE_PATH})
 
 ### Options
 # Shared/Dynamic or Static library?
@@ -69,16 +62,10 @@ add_install_rpath_support(BIN_DIRS "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_BIND
                           DEPENDS ENABLE_RPATH
                           USE_LINK_PATH)
 
-# Add Yarp
-add_definitions(${YARP_DEFINES})
-
-
-include_directories(${YARP_INCLUDE_DIRS} ${ICUB_INCLUDE_DIRS} ${GSL_INCLUDE_DIRS})
-						  
 ### Compile- and install-related commands
 add_subdirectory(src)
 
-# Install the files necessary to call find_package(TactileControl) in CMake projects
+# Install the files necessary to call find_package(LibTemplateCMake) in CMake projects
 include(InstallBasicPackageFiles)
 install_basic_package_files(${PROJECT_NAME} VARS_PREFIX ${PROJECT_NAME}
                                             VERSION ${${PROJECT_NAME}_VERSION}
@@ -87,8 +74,6 @@ install_basic_package_files(${PROJECT_NAME} VARS_PREFIX ${PROJECT_NAME}
                                             NO_CHECK_REQUIRED_COMPONENTS_MACRO)
 # Add the uninstall target
 include(AddUninstallTarget)
-
-
 
 # Add integration tests (unit tests for each library should be in each sublibrary directory)
 if(BUILD_TESTING)
