--- a/tactile-control-wrapper/app/contexts/tactileControlWrapper/confTactileControlLib.ini
+++ b/tactile-control-wrapper/app/contexts/tactileControlWrapper/confTactileControlLib.ini
@@ -2,8 +2,8 @@
 taskThreadPeriod 20
 dataCollectionThreadperiod 15
 portPrefix handController
-hand left
-icub iCubGenova01
+hand right
+icub icub
 controlledJoints (9 11 13)
 pwmSign 1
 fingertipSensitivity (1.0 0.6 0.6)
