--- a/tactile-control-wrapper/app/contexts/tactileControlWrapper/confTactileControlLibBlack.ini
+++ b/tactile-control-wrapper/app/contexts/tactileControlWrapper/confTactileControlLibBlack.ini
@@ -6,12 +6,12 @@ hand right
 icub icub
 controlledJoints (9 11 13)
 pwmSign 1
-fingertipSensitivity (1.0 1.0 1.0 1.0 1.0)
+fingertipSensitivity (1.0 0.6 0.6)
 openHandJoints (23 3 40 2 40 3 40 1)
 disablePwm false
 tactileMedianWindowSize 50
 refVelocity 100.0
-usingTwoHands false
+usingTwoHands true
 experimentInfo ""
 experimentOptionalInfo ""
 useTactileWeightedSum true
