improved configuration files management

--- a/tactile-control-wrapper/app/contexts/tactileControlWrapper/confTactileControlWrapper.ini
+++ b/tactile-control-wrapper/app/contexts/tactileControlWrapper/confTactileControlWrapper.ini
@@ -1,4 +1,4 @@
 portPrefix tactileControlWrapper
 moduleThreadPeriod 1000 // milliseconds
-libConfigFileName confTactileControlLib.ini
+libConfigFileName confTactileControlLib
 libConfigFileContext tactileControlWrapper
