--- a/tactile-control-wrapper/app/contexts/tactileControlWrapper/confTactileControlLib.ini
+++ b/tactile-control-wrapper/app/contexts/tactileControlWrapper/confTactileControlLib.ini
@@ -3,7 +3,7 @@ taskThreadPeriod 20
 dataCollectionThreadperiod 15
 portPrefix handController
 hand right
-icub icub
+icub iCubGenova01
 controlledJoints (9 11 13)
 pwmSign 1
 disablePwm false
