added ring-little fingers

--- a/tactile-control-wrapper/app/contexts/tactileControlWrapper/confTactileControlLib.ini
+++ b/tactile-control-wrapper/app/contexts/tactileControlWrapper/confTactileControlLib.ini
@@ -15,6 +15,7 @@ experimentOptionalInfo ""
 useTactileWeightedSum true
 enableScreenLogging true
 screenLoggingRate 5
+useRingLittleFingers false
 
 ### Parameters related to the step task ###
 step.duration 10
@@ -28,6 +29,7 @@ ramp.intercept -90.0
 ### Parameters related to the approach task ###
 approach.duration 5
 approach.velocities (50 50 50)
+approach.ringLittleVelocities 50
 approach.pwmLimitEnabled true
 
 ### Parameters related to the contol task ###
