--- a/tactile-control-wrapper/app/contexts/tactileControlWrapper/confTactileControlLib_iCubGenova01.ini
+++ b/tactile-control-wrapper/app/contexts/tactileControlWrapper/confTactileControlLib_iCubGenova01.ini
@@ -6,6 +6,7 @@ openHandJoints (35 3 48 2 64 3 57 1)
 
 ### Parameters related to the approach task ###
 approach.maxPwm (450 250 250)
+approach.ringLittleMaxPwm 400
 approach.windowSize 25
 approach.threshold 1.5
 approach.timeout 0.7
@@ -23,6 +24,7 @@ control.high.gripStrength 100.0
 control.high.thumbAbductionOffset -30.0
 control.high.minForceEnabled false
 control.high.minForce 0.0
+control.high.ringLittlePwm 500
 
 [rightHand]
 
@@ -32,6 +34,7 @@ openHandJoints (43 3 28 2 35 3 48 1)
 
 ### Parameters related to the approach task ###
 approach.maxPwm (450 350 350)
+approach.ringLittleMaxPwm 400
 approach.windowSize 25
 approach.threshold 1.5
 approach.timeout 0.7
@@ -49,5 +52,5 @@ control.high.gripStrength 150.0
 control.high.thumbAbductionOffset -50.0
 control.high.minForceEnabled false
 control.high.minForce 0.0
-
+control.high.ringLittlePwm 500
 
