--- a/tactile-control-wrapper/app/contexts/tactileControlWrapper/confTactileControlWrapper.ini
+++ b/tactile-control-wrapper/app/contexts/tactileControlWrapper/confTactileControlWrapper.ini
@@ -2,4 +2,4 @@ portPrefix tactileControlWrapper
 moduleThreadPeriod 1000 // milliseconds
 libConfigFileName confTactileControlLib
 libConfigFileContext tactileControlWrapper
-hand left
+hand right
