--- a/tactile-control-wrapper/app/contexts/tactileControlWrapper/confTactileControlLib_iCubGenova02.ini
+++ b/tactile-control-wrapper/app/contexts/tactileControlWrapper/confTactileControlLib_iCubGenova02.ini
@@ -7,7 +7,8 @@ openHandJoints (23 3 40 2 40 3 40 1)
 ### Parameters related to the approach task ###
 approach.maxPwm (450 350 350)
 approach.windowSize 25
-approach.threshold 1.5
+approach.threshold 5.0
+approach.errorThreshold 5.0
 approach.timeout 0.7
 
 ### Parameters related to the contol task ###
@@ -33,7 +34,8 @@ openHandJoints (23 3 40 2 40 3 40 1)
 ### Parameters related to the approach task ###
 approach.maxPwm (450 350 350)
 approach.windowSize 25
-approach.threshold 1.5
+approach.threshold 5.0
+approach.errorThreshold 5.0
 approach.timeout 0.7
 
 ### Parameters related to the contol task ###
