--- a/tactile-control-wrapper/app/contexts/tactileControlWrapper/confTactileControlLib_iCubGenova01.ini
+++ b/tactile-control-wrapper/app/contexts/tactileControlWrapper/confTactileControlLib_iCubGenova01.ini
@@ -8,7 +8,8 @@ openHandJoints (35 3 48 2 64 3 57 1)
 approach.maxPwm (450 250 250)
 approach.ringLittleMaxPwm 250
 approach.windowSize 25
-approach.threshold 1.5
+approach.threshold 5.0
+approach.errorThreshold 5.0
 approach.timeout 0.7
 
 ### Parameters related to the contol task ###
@@ -36,7 +37,8 @@ openHandJoints (43 3 28 2 35 3 48 1)
 approach.maxPwm (450 350 350)
 approach.ringLittleMaxPwm 250
 approach.windowSize 25
-approach.threshold 1.5
+approach.threshold 5.0
+approach.errorThreshold 5.0
 approach.timeout 0.7
 
 ### Parameters related to the contol task ###
