wrapper: matlab-free version and added multimodal classifier

--- a/tactile-control-wrapper/app/contexts/tactileControlWrapper/confTactileControlLib.ini
+++ b/tactile-control-wrapper/app/contexts/tactileControlWrapper/confTactileControlLib.ini
@@ -60,3 +60,20 @@ control.high.gmmBestPoseLogOneShot false
 control.high.gmmJointsRegressionEnabled false
 control.high.gmmJointsMinJerkTrackingEnabled true
 control.high.gmmJointsMinJerkTrackingRefTime 4.0
+
+### Parameters related to machine learning ###
+ml.objRecTaskEnabled false
+ml.dataCollectionEnabled false
+ml.objectClassificationEnabled false 
+ml.classifierType 0 # 0: tactile classifier, 1: multimodal classifier
+
+ml.trainingDataPath "/home/icub/tmp_massimo/tactile-control/data/objectRecognition/"
+
+ml.graspStabilizationTime 4.0
+ml.objectSqueezingTime 3.0
+ml.tactileDataCollectionTime 1.0
+ml.bendingProximalJointsTime 3.0
+ml.bendingDistalJointsTime 4.0
+
+ml.objectID 1
+
