--- a/tactile-control-wrapper/app/contexts/tactileControlWrapper/confTactileControlLib_iCubGenova01.ini
+++ b/tactile-control-wrapper/app/contexts/tactileControlWrapper/confTactileControlLib_iCubGenova01.ini
@@ -27,6 +27,12 @@ control.high.minForceEnabled false
 control.high.minForce 0.0
 control.high.ringLittlePwm -300
 
+### Parameters related to machine learning ###
+ml.gripStrengthForSqueezing 100.0
+ml.handEnclosureIndexProxJointPwm 250.0
+ml.handEnclosureRingLittleJointPwm -300.0
+ml.handEnclosureIndexDistJointPwm -250.0
+
 [rightHand]
 
 ### Parameters common to all the tasks ###
@@ -56,3 +62,8 @@ control.high.minForceEnabled false
 control.high.minForce 0.0
 control.high.ringLittlePwm -300
 
+### Parameters related to machine learning ###
+ml.gripStrengthForSqueezing 100.0
+ml.handEnclosureIndexProxJointPwm 250.0
+ml.handEnclosureRingLittleJointPwm -300.0
+ml.handEnclosureIndexDistJointPwm -250.0
