--- a/tactile-control-wrapper/app/contexts/tactileControlWrapper/confTactileControlLib_iCubGenova02.ini
+++ b/tactile-control-wrapper/app/contexts/tactileControlWrapper/confTactileControlLib_iCubGenova02.ini
@@ -25,6 +25,12 @@ control.high.thumbAbductionOffset -30.0
 control.high.minForceEnabled false
 control.high.minForce 0.0
 
+### Parameters related to machine learning ###
+ml.gripStrengthForSqueezing 100.0
+ml.handEnclosureIndexProxJointPwm 250.0
+ml.handEnclosureRingLittleJointPwm -300.0
+ml.handEnclosureIndexDistJointPwm -250.0
+
 [rightHand]
 
 ### Parameters common to all the tasks ###
@@ -51,3 +57,9 @@ control.high.gripStrength 50.0
 control.high.thumbAbductionOffset -30.0
 control.high.minForceEnabled false
 control.high.minForce 0.0
+
+### Parameters related to machine learning ###
+ml.gripStrengthForSqueezing 100.0
+ml.handEnclosureIndexProxJointPwm 250.0
+ml.handEnclosureRingLittleJointPwm -300.0
+ml.handEnclosureIndexDistJointPwm -250.0
