--- a/tactile-control-wrapper/app/contexts/tactileControlWrapper/confTactileControlLib.ini
+++ b/tactile-control-wrapper/app/contexts/tactileControlWrapper/confTactileControlLib.ini
@@ -62,12 +62,12 @@ control.high.gmmJointsMinJerkTrackingEnabled true
 control.high.gmmJointsMinJerkTrackingRefTime 4.0
 
 ### Parameters related to machine learning ###
-ml.objRecTaskEnabled false
+ml.objRecTaskEnabled true
 ml.dataCollectionEnabled false
 ml.objectClassificationEnabled false 
 ml.classifierType 0 # 0: tactile classifier, 1: multimodal classifier
 
-ml.trainingDataPath "/home/icub/tmp_massimo/tactile-control/data/objectRecognition/"
+ml.trainingDataPath "/home/icub/tmp_massimo/objectRecognitionData/"
 
 ml.graspStabilizationTime 4.0
 ml.objectSqueezingTime 3.0
