--- a/tactile-control-wrapper/app/contexts/tactileControlWrapper/confTactileControlLib_objRec.ini
+++ b/tactile-control-wrapper/app/contexts/tactileControlWrapper/confTactileControlLib_objRec.ini
@@ -2,19 +2,20 @@
 taskThreadPeriod 20
 dataCollectionThreadperiod 15
 portPrefix handController
-hand right
+hand left
 icub iCubGenova01
-controlledJoints (9 11 13)
+controlledJoints (9 13)
 pwmSign 1
 disablePwm false
 tactileMedianWindowSize 50
 refVelocity 100.0
-usingTwoHands false
+usingTwoHands true
 experimentInfo ""
 experimentOptionalInfo ""
 useTactileWeightedSum true
-enableScreenLogging true
+enableScreenLogging false
 screenLoggingRate 5
+useRingLittleFingers false
 
 ### Parameters related to the step task ###
 step.duration 10
@@ -27,7 +28,8 @@ ramp.intercept -90.0
 
 ### Parameters related to the approach task ###
 approach.duration 5
-approach.velocities (20 20 20)
+approach.velocities (50 50)
+approach.ringLittleVelocities 50
 approach.pwmLimitEnabled true
 
 ### Parameters related to the contol task ###
@@ -58,3 +60,20 @@ control.high.gmmBestPoseLogOneShot false
 control.high.gmmJointsRegressionEnabled false
 control.high.gmmJointsMinJerkTrackingEnabled true
 control.high.gmmJointsMinJerkTrackingRefTime 4.0
+
+### Parameters related to machine learning ###
+ml.objRecTaskEnabled true
+ml.dataCollectionEnabled true
+ml.objectClassificationEnabled false 
+ml.classifierType 0 # 0: tactile classifier, 1: multimodal classifier
+
+ml.trainingDataPath "/home/icub/tmp_massimo/objectRecognitionData/"
+
+ml.graspStabilizationTime 3 #0.3 #4.0
+ml.objectSqueezingTime 2 #0.3 #3.0
+ml.tactileDataCollectionTime 1.0
+ml.bendingProximalJointsTime 3 #0.3 #3.0
+ml.bendingDistalJointsTime 3 #0.4 #4.0
+
+ml.objectID 1
+
