--- a/tactile-control-wrapper/app/contexts/tactileControlWrapper/confTactileControlWrapper_objRec.ini
+++ b/tactile-control-wrapper/app/contexts/tactileControlWrapper/confTactileControlWrapper_objRec.ini
@@ -1,5 +1,5 @@
 portPrefix tactileControlWrapper
 moduleThreadPeriod 1000 // milliseconds
-libConfigFileName confTactileControlLib
+libConfigFileName confTactileControlLib_objRec
 libConfigFileContext tactileControlWrapper
 hand right
